# netban-server

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  entrypoint.sh  pyproject.toml
src/: manage.py
src/app/: settings.py
src/restrictions/: apps.py  exceptions.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
src/restrictions/migrations/: 0001_initial.py  0002_remove_userrestriction_restriction_length.py  0003_userrestriction_restriction_length.py
src/server/core/: mixins.py  permissions.py  views.py
src/server/platform/: admin.py  apps.py  constants.py  models.py
src/server/platform/migrations/: 0001_initial.py
src/server/restrictions/: admin.py  apps.py  choices.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
src/server/restrictions/migrations/: 0001_initial.py  0002_userrestriction_platform_group.py  0003_userrestriction_restricted_by.py
src/server/settings/: settings.py  utils.py
src/server/urls/: __init__.py  admin_urls.py  api_urls.py  schema_urls.py
src/server/users/: admin.py  models.py
src/server/users/migrations/: 0001_initial.py
src/settings/: settings.py
src/urls/: api_urls.py
src/users/: admin.py  models.py
src/users/migrations/: 0001_initial.py  0002_platformuser_user_platform_user.py
